tests/vertical-slice/reject/gen_capture_whole_value_push.hew
fn main() {
    let items: Vec<i64> = Vec::new();
    let _g = gen {
        let sink: Vec<Vec<i64>> = Vec::new();
        sink.push(items);
        yield sink.len();
    };
}
